src/alto-ui/Datagrid/Datagrid.scss
@import '../scss/inc';

.Datagrid {
  overflow: hidden;
  height: 100%;
  display: flex;
  flex-direction: column;
  opacity: 0;
  border: 1px solid $coolgrey-20;
  border-radius: $border-radius-default;
  max-width: 100%;
  max-height: 100%;

  &--loaded {
    opacity: 1;
  }
}

.Datagrid__head,
.Datagrid__body {
  display: flex;
}

.Datagrid__body {
  flex: 1;
  background-color: $white;
}

.Datagrid__head {
  border-bottom: 1px solid $coolgrey-20;

  .ps__rail-x {
    display: none;
  }
}

.Datagrid__header-row--frozen {
  margin-right: 2px;
  box-shadow: 2px 0 0 $coolgrey-20;
}

.Datagrid__header-row--static,
.Datagrid__rows--static {
  flex: 1;
}
.Datagrid__header-row,
.Datagrid__rows {
  overflow: hidden;
}

.Datagrid__rows--frozen {
  box-shadow: 2px 0 0 $coolgrey-20;
  margin-right: 2px;
  .ps__rail-y {
    display: none;
  }
}

.Datagrid__rows--static {
  position: relative;
}

.Datagrid__rows-container {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  overflow: auto;
}

